--- a/src/ExtismHello/ExtismHello.csproj
+++ b/src/ExtismHello/ExtismHello.csproj
@@ -2,14 +2,14 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net7.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Extism.runtime.win-x64" Version="0.6.0" />
-    <PackageReference Include="Extism.Sdk" Version="0.6.0" />
+    <PackageReference Include="Extism.runtime.all" Version="1.9.1" />
+    <PackageReference Include="Extism.Sdk" Version="1.9.0" />
   </ItemGroup>
 
   <ItemGroup>
